--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Our Enterprise</h1>
+        <h1>Welcome to Our Crew AI Techsur Team</h1>
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
